# thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/az/: baseline_stats.csv  district_summary_metrics.csv  district_summary_vap.csv  ensemble_metrics.csv  precincts_with_districts.dbf  precincts_with_districts.shx  precincts_with_vap.dbf  precincts_with_vap.shx
redistricting/: __init__.py
redistricting/env/: __init__.py  actions.py  core.py  masking.py  observations.py
redistricting/graph/: __init__.py  construction.py  metrics.py
redistricting/models/: __init__.py  gnn_encoder.py
redistricting/reward/: __init__.py  shaping.py  zscore.py
redistricting/rl/: __init__.py  agent.py  trainer.py
redistricting/utils/: __init__.py  data_audit.py  device.py  logger.py  paths.py  visualization.py
scripts/: audit_data.py  az_quick_sweep.py  evaluate.py  generate_baseline.py  plot_run.py  run_baseline.sh  run_e2e.sh  run_eval.sh  run_mo_long_train.sh  run_train.sh  short_learning_proof.py  summarize_learning.py  train.py
src/analysis/: baseline_stats.py  live_plotter.py  reward_function.py  visualizations.py
src/graph/: chain.py  construction.py  metrics.py
src/models/: __init__.py  gnn_encoder.py
src/processing/: metrics.py  pre.py
src/rl/: __init__.py  agent.py  environment.py  trainer.py
src/utils/: __init__.py  data_audit.py  logger.py  map_visualization.py  paths.py
tests/: conftest.py  test_action_cap_ablation.py  test_agent.py  test_env.py  test_graph.py  test_models.py  test_pipeline.py  test_reward.py
(+8 files in other folders)
