[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redistricting-gnn-ppo"
version = "0.1.0"
description = "Multi-metric fairness optimization for congressional redistricting with GNN-PPO."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi==2025.8.3",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.59.2",
  "geopandas==1.1.1",
  "gerrychain==0.3.2",
  "gymnasium>=0.29.0",
  "kiwisolver==1.4.9",
  "matplotlib==3.10.6",
  "networkx==3.5",
  "numpy==2.3.2",
  "packaging==25.0",
  "pandas==2.3.2",
  "pillow==11.3.0",
  "pyogrio==0.11.1",
  "pyparsing==3.2.4",
  "pyproj==3.7.2",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "scipy==1.16.2",
  "seaborn==0.13.2",
  "shapely==2.1.1",
  "six==1.17.0",
  "torch>=2.0.0",
  "torch-geometric>=2.4.0",
  "torch-scatter>=2.1.0",
  "torch-sparse>=0.6.0",
  "torch-cluster>=1.6.0",
  "tqdm==4.67.1",
  "tzdata==2025.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["redistricting*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
  "slow: marks tests that depend on full state data",
]
